feature-configs/demo/gatekeeper/20_DemoNamespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gatekeeper-demo
  labels:
    admission.gatekeeper.sh/tolerations: "enforce"
